# ClimateSimulation

./: .gitignore  LICENSE  README.md  plotter.py  pyproject.toml  reboot_climate_web_app.sh  reboot_pond.py  reboot_pond.sh
arduino/arduino_lights_manager/: arduino_lights_manager.ino
arduino/light_test_0to5/: light_test_0to5.ino
rpi/: basic_light_test.py  climate_web_interface.py  climate_web_utilities.py  control_lights.py  excel4.py  light_utilities.py
rpi/data/: devices.json
rpi/default_profiles/: 12_on_12_off.xlsx  std_day.xlsx
rpi/static/: .gitignore
rpi/static/live/: day2.xlsx  day3.xlsx
rpi/templates/: example_page.html  live_light_profile.html  main_page.html  run_light_profile.html  view_light_profile.html
src/climatesimulation.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/climatesimulation/rpi/web/: PISCES_12June24_RPi.xlsx  app.py  excel2.py  excel3.py  main.py
test_data/: day1.xlsx
tests/: 12_on_12_off.xlsx  day1.xlsx  day3.xlsx  demo_45secgradient_5mins.xlsx
