[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "climatesimulation"
version = '0.1'
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Phil Parisi", email ="philsbeginnercode@gmail.com"}]
dependencies = [
    'pandas',
    'flask',
    'openpyxl',
    'matplotlib',
    'serial'
]

[tool.setuptools.packages.find]
where= ["src"]